Version 1.16.0
---------------------------------
Add more statistics data
Add detailed breakdowns for platform, release year, last played year, and tags

Add application icon :3

An individual entry's URL menu no longer shows list of all possible entries as it was not useful.

Version 1.15.1 (2024-01-29)
---------------------------------
With this version, I feel that I am approaching the end of the line with Excella's
development. The application has matured quite a bit over the months, and there are
only a few small things to iron out.

These are:
- Excella needs a fitting icon :)
- Loading databases is currently only threaded at startup. Other loading instances should
be threaded as well.
- The keyboard shortcut for opening / closing the filter node breaks when the user
interacts with the element with the mouse.
- I could also add graphs to the statistics view, but at this point I'm not sure
how useful they would be.
- I could also remove the hard-coded entry limits and use a dynamic array instead,
but I'm not yet sure if I would want to do that at this point.
- Tag manager UI could use some touch-up.
- I could add UUIDs to entries to simplify some things and improve performance, but
the gains would only matter theoretically.

Afterwards, Excella's development will cease and work will move to maintenance mode only.

Minor UI improvements

Fix a bug preventing entries from being deleted.

Actually cap framerate at 60 this time

Prevent the database from being modified when current db operation has not finished
This should prevent corrupting the database file on very slow machines and/or very large database files.

Add excluding entries by tag
Entries can now be filtered-out via tags. Simply right click on the tag's name in Tag Manager or use the
new -Tag button in the filtering drop-down to create exclusive tags.

Add new statistics page
This is a second attempt at implementing a statistics view. For now, the view shows the total number of entries,